# -*- Makefile.am -*-
#
# Copyright (c) 2018      Los Alamos National Security, LLC. All rights
#                         reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

noinst_PROGRAMS = rmamt_bw rmamt_lat rmamt_bibw

rmamt_bw_SOURCES = rmamt_options.c rmamt_options.h rmamt_common.c rmamt_common.h rmamt_bw.c
rmamt_lat_SOURCES = rmamt_options.c rmamt_options.h rmamt_common.c rmamt_common.h rmamt_lat.c
rmamt_bibw_SOURCES = rmamt_options.c rmamt_options.h rmamt_common.c rmamt_common.h rmamt_bibw.c
